# Maretu

./: .gitignore  Flet-README.md  LICENSE  MANIFEST.in  README.md  Tasks.md  android-build.sh  pyproject.toml  requirements.txt  skell-git.md
Maretu Client/: README.md  pyproject.toml
Maretu Server/: README.md  main.py  pyproject.toml
Maretu Server/modules/: maretudb.py
Maretu Server/modules/docs/: MaretuDB.md
Maretu Server/querys/: DEBUG-LOGIN.sql  DEBUG.sql
Maretu Server/rest/: querys.http  test.http
app/: pyproject.toml
app/src/: main.py
docs/: README.md  index.html
docs/src/: script.js
server/: pyproject.toml
server/test/: runing-lt.http
src/: main.py
src/Maretu/: manage.py
src/Maretu/Maretu/: asgi.py  settings.py  urls.py  wsgi.py
src/SQL/: DEBUG.sql
src/modules/: crearArchivos.py  database.py  encontrarRutas.py  lecturaEnv.py
