[project]
name = "Maretu"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Skellent", email = "skellent69@gmail.com" }
]
dependencies = [
  # Keep the runtime set minimal for Android builds. Native-extension packages
  # (mariadb, lxml, uvloop, uvicorn, etc.) often fail during cross-build.
  # Move DB/server logic to a backend service instead of embedding DB drivers.
  "flet[all]==0.28.3",
  "python-dotenv==1.2.1",
  "requests==2.32.5",
  "PyYAML==6.0.2",
  "pydantic==2.12.4"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.skellent.maretu"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Skell's Maretu"

# company name to display in about app dialogs
company = "Skell's Software"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}